# INSB

./: README.md
Lab2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textEncryption.cpp  textEncryption.h
Lab3/: kerberos_client.py  kerberos_server.py
Lab4/: ack_flood.py  client.py  server.py  slowloris.py  syn_flood.py
Lab5/: main.c
Lab6/: main.py
Lab7/: main.c  main_obfuscated.c
